# revivo-mk1

./: .gitignore  .mcp.json  .nxignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  eslint.config.mjs  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.claude/: settings.json
.claude/agents/: gsd-executor.md  gsd-planner.md
.claude/skills/: safe-schema-change.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/workflows/: ci.yml
.planning/: CHECKPOINTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: apr-mismatch-loan.md  dialog-overlay-bleed.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/02-account-domain/: .continue-here.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md
.planning/phases/03-transaction-domain/: .continue-here.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-07-PLAN.md  03-CONTEXT.md  03-RESEARCH.md  03-UAT.md
.planning/phases/03.1-split-identity-validation-fixes/: .continue-here.md  03.1-01-PLAN.md  03.1-01-SUMMARY.md  03.1-02-PLAN.md  03.1-02-SUMMARY.md  03.1-03-PLAN.md  03.1-04-PLAN.md  (+6 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_create_accounts_table.py  003_add_transaction_tables.py  004_add_category_type.py  005_add_split_identity.py  006_add_auth_tables.py  007_replace_owner_with_role.py
apps/api/: alembic.ini  project.json  pyproject.toml  pyrightconfig.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: c30a32b605ab_initial_schema.py
apps/api/scripts/: generate_openapi.py  verify-mailpit.py
apps/api/scripts/jobs/: list-failed.sh  purge-old.sh  queue-stats.sh  retry-all-failed.sh
apps/api/src/adapters/: logging.py
apps/api/src/adapters/api/: app.py  dependencies.py
apps/api/src/adapters/api/routes/: __init__.py  accounts.py  auth.py  categories.py  health.py  transactions.py
apps/api/src/adapters/api/schemas/: __init__.py  account.py  auth.py  category.py  transaction.py
apps/api/src/adapters/email/: __init__.py  smtp_adapter.py
apps/api/src/adapters/email/templates/: base.mjml  verification.mjml  verification.txt
apps/api/src/adapters/jobs/: __init__.py  app.py  tasks.py
apps/api/src/adapters/persistence/: database.py  unit_of_work.py
apps/api/src/adapters/persistence/orm/: __init__.py  mappers.py  tables.py  types.py
apps/api/src/adapters/persistence/repositories/: account.py  category.py  household.py  payee.py  refresh_token.py  transaction.py  user.py
apps/api/src/adapters/security/: jwt.py  password.py
apps/api/src/application/: __init__.py  event_bus.py
apps/api/src/application/handlers/: __init__.py  user_handlers.py
apps/api/src/application/services/: __init__.py  account_service.py  auth_service.py  category_service.py  transaction_service.py
apps/api/src/domain/model/: account.py  money.py  payee.py  rewards_balance.py  split_line.py  user.py
apps/api/src/domain/ports/: household_repository.py  unit_of_work.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: __init__.py  conftest.py  test_account_api.py  test_account_repository.py  test_category_api.py  test_database.py  test_email_verification.py  test_event_publishing.py  test_schema_parity.py  test_transaction_api.py
apps/api/tests/integration/api/: test_auth.py  test_auth_me.py
apps/api/tests/mocks/: email.py
apps/api/tests/unit/adapters/api/: __init__.py  test_auth_schemas.py
apps/api/tests/unit/adapters/security/: test_jwt.py  test_tokens.py
apps/api/tests/unit/application/: test_account_service.py  test_auth_service.py  test_event_bus.py
apps/api/tests/unit/domain/: test_household.py  test_institution.py
apps/web/: .gitignore  index.html  package.json  playwright.config.ts  project.json  tsconfig.json  tsconfig.spec.json  vite.config.ts
docs/runbooks/: job-queue.md
libs/domain/: project.json  pyproject.toml  pyrightconfig.json
libs/domain/domain/: exceptions.py
libs/domain/domain/events/: __init__.py  account_events.py  transaction_events.py  user_events.py
libs/domain/domain/model/: __init__.py  account.py  category.py  entity_id.py  household.py  institution.py  money.py  payee.py  rewards_balance.py  split_line.py  transaction.py  user.py
libs/domain/domain/ports/: __init__.py  account_repository.py  category_repository.py  household_repository.py  payee_repository.py  repository.py  transaction_repository.py  unit_of_work.py  user_repository.py
libs/domain/tests/unit/domain/: test_account.py  test_account_types.py  test_category.py  test_entity_id.py  test_household.py  test_institution.py  test_money.py  test_payee.py  test_rewards_balance.py  test_split_line.py  test_transaction.py  test_user.py
libs/ui/: components.json  package.json  project.json  tsconfig.json
scripts/: setup-postgres.sh
scripts/jobs/: apply-schema.sh  job-status.sh  retry-job.sh
secrets/: encryption_key.txt
src/: __init__.py  main.py
src/adapters/: __init__.py
src/application/: __init__.py  event_bus.py
src/domain/: __init__.py  exceptions.py
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_account_api.py  test_account_repository.py  test_category_api.py  test_database.py  test_email_verification.py  test_encryption.py  test_event_publishing.py  test_transaction_api.py
tests/mocks/: __init__.py
(+338 files in other folders)
