[project]
name = "personal-finance"
version = "0.1.0"
description = "Personal finance platform with DDD and Clean Architecture"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Developer" }]

dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pyright>=1.1.0",
    "import-linter>=2.1.0",
    "pytest>=8.3.0",
    "hypothesis>=6.121.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=4.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/api/src", "libs/domain/domain"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.workspace]
members = ["apps/api", "libs/domain"]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "domain"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================================
# Mypy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "typeid.*"
ignore_missing_imports = true

# ============================================================================
# Import-linter Configuration (Architecture Enforcement)
# ============================================================================
[tool.importlinter]
root_packages = ["src", "domain"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Domain layer has no infrastructure dependencies"
type = "forbidden"
source_modules = ["domain"]
forbidden_modules = [
    "src.adapters",
    "src.application",
    "sqlalchemy",
    "fastapi",
    "pydantic",
    "alembic",
    "asyncpg",
    "psycopg2",
    "structlog",
]

[[tool.importlinter.contracts]]
name = "Hexagonal architecture layers"
type = "layers"
layers = [
    "src.adapters.api",
    "src.adapters.persistence",
    "src.application",
    "domain",
]

# Note: We don't enforce adapter independence because the API adapter
# acts as the composition root and needs to coordinate between adapters.
# The critical constraint is that domain has no infrastructure dependencies.

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["apps/api/tests", "libs/domain/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short --import-mode=importlib"

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["apps/api/src", "libs/domain/domain"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
