[project]
name = "personal-finance-domain"
version = "0.1.0"
description = "Personal Finance domain layer - models, events, ports"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "typeid-python>=0.3.9",
    "returns>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["domain"]
